# Chimera

./: .env.sample  .gitattributes  .gitignore  ACCESSIBILITY.md  CORE_COMPONENTS.md  IMPORT_RESOLUTION.md  MIGRATION_PLAN.md  PHASE2_PROGRESS.md  README.md  alembic.ini  check_system.py  chimera.db  chimera_dashboard.py  easy_start.bat  easy_start.sh  fix_environment.bat  fix_environment.py  fix_environment.sh  fix_mcp.py  inspect_mcp.py  inspect_sdk.py  main.py  make_executable.py  mcp_data_collector.py  mcp_server.py  port_checker.py  pyproject.toml  requirements.txt  run_with_proxy.bat  run_with_proxy.sh  server.py  setup.bat  setup.sh  simple_port_checker.py  standalone_mcp_server.py  start_agent.bat  start_chimera.bat  start_chimera.sh  status.bat  status.sh  (+4 more)
alembic/: env.py
alembic/versions/: a9a67a4be7b5_initial_schema.py
chimera-vscode-extension/: .eslintrc.json  .gitignore  package.json  tsconfig.json  tsconfig.node.json
docs/: char_prefix_conditioning.md
examples/: IMPLEMENTATION_SUMMARY.md
examples/vscode-extension/: .gitignore  README.md  USAGE.md  demo.py  demo.ts  package-lock.json  package.json  tsconfig.json
scripts/: README.md  ai_code_mcp_server.py  database_mcp_server.py  file_manager_mcp_server.py  gemini_mcp_server.py  run_api.py  setup_db.py  start_core_server.py  test_ai.py  test_ai_code_mcp.py  test_ai_service.py  test_database_mcp.py  test_db.py  test_file_manager_mcp.py  test_gemini_mcp.py  test_mcp_context_cache.py  test_mcp_sampling.py  test_prompt_service.py  test_rule_engine.py  test_services.py
scripts/common/: run_all.py  run_mcp_server.py  run_ui_server.py
scripts/unix/: run_chimera.sh
scripts/windows/: run_chimera.bat  start_core_server.bat
src/: README.md
src/chimera_core/: README.md  config.py  factory.py  main.py  server.py
templates/: code_analysis.html  dashboard.html  git.html  index.html  settings.html  terminal.html
tests/: README.md  __init__.py  test_simple.py
(+102 files in other folders)
